--- a/TorreBio/templates/bio_user/index.html.twig
+++ b/TorreBio/templates/bio_user/index.html.twig
@@ -20,6 +20,7 @@
 <div>
 	{% if user_profile|length > 0 %}
 	<h1>Hay usuario</h1>
+	<li> {{ user_profile }}</li>
 	{% else %}
 	<h1>No hay registros</h1>
 	{% endif %}
