ajuste compatibilidad vue with twig

--- a/TorreBio/templates/bio_user/index.html.twig
+++ b/TorreBio/templates/bio_user/index.html.twig
@@ -25,5 +25,7 @@
 	<h1>No hay registros</h1>
 	{% endif %}
 </div>
-<div id="userPro"></div>
+<div id="userPro">
+	${ titulo }
+</div>
 {% endblock %}
