--- a/TorreBio/templates/bio_user/index.html.twig
+++ b/TorreBio/templates/bio_user/index.html.twig
@@ -25,27 +25,27 @@
 		<h5 class="card-title">Welcome to bio of {{ name_user }}</h5>
 		<p class="card-text"> {{name_proHead}}</p>
 	</div>
-	<div class="accordion">
+	<div class="accordion" id="accordionExp">
 		{% for exp in user_exp %}
-		<div class="card">
+		<div class="card" >
 			<div class="card-header" id={{exp.id|e}}>
 				<h2 class="mb-0">
-					<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapse_{{exp.id|e}}" aria-expanded="true" aria-controls="collapse_{{exp.id|e}}">
 						{{ exp.name|e }}
 					</button>
 				</h2>
 			</div>
 
-			<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+			<div id="collapse_{{exp.id|e}}" class="collapse show" aria-labelledby={{exp.id|e}} data-parent="#accordionExp">
 				<div class="card-body">
 					<li>Categoria: {{ exp.category|e}}</li>
 					<li>Empresa: {{ exp["organizations"][0]["name"] }}</li>
+					<li>Inicio: {{ exp["fromYear"] }}</li>
+					<li>Fin: {{ exp["toYear"] }}</li>
 				</div>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
-	<h1> ${ titulo } </h1>
-	<p> ${ dataU } </p>
 </div>
 {% endblock %}
